Opened 14 years ago
Closed 14 years ago
#6198 closed bug (fixed)
SegFault when launching Pulse demo
Reported by: | humdinger | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev37164, gcc4hybrid
Launching Pulse crashes with this backtrace:
[tcsetpgrp failed in terminal_inferior: Invalid Argument] Thread 4286 caused an exception: Segment violation Reading symbols from /boot/system/runtime_loader...done. Loaded symbols for /boot/system/runtime_loader Reading symbols from /boot/system/lib/libbe.so...done. Loaded symbols for /boot/system/lib/libbe.so Reading symbols from /boot/system/lib/liblocale.so...done. Loaded symbols for /boot/system/lib/liblocale.so Reading symbols from /boot/system/lib/libsupc++.so...done. Loaded symbols for /boot/system/lib/libsupc++.so Reading symbols from /boot/system/lib/libroot.so...done. Loaded symbols for /boot/system/lib/libroot.so Reading symbols from /boot/system/lib/libstdc++.so...done. Loaded symbols for /boot/system/lib/libstdc++.so Reading symbols from /boot/system/lib/libicu-common.so.4.2...done. Loaded symbols for /boot/system/lib/libicu-common.so.4.2 Reading symbols from /boot/system/lib/libicu-i18n.so.4.2...done. Loaded symbols for /boot/system/lib/libicu-i18n.so.4.2 Reading symbols from /boot/system/lib/libicu-data.so.4.2...done. Loaded symbols for /boot/system/lib/libicu-data.so.4.2 [tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/demos/Pulse (4286) thread Pulse (4286)] 0x0047a287 in BCatalog::GetString () from /boot/system/lib/liblocale.so (gdb) bt #0 0x0047a287 in BCatalog::GetString () from /boot/system/lib/liblocale.so #1 0x002185eb in PulseWindow::PulseWindow () #2 0x0021689e in PulseApp::BuildPulse () #3 0x00216bf6 in PulseApp::PulseApp () #4 0x00216c73 in main ()
Note:
See TracTickets
for help on using tickets.
My bad, I didn't properly check the localization patch. Fixed in hrev37183.