BCatalog was used in the wrong way. Fixes ticket #6198.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37183 a95241bf-73f2-0310-859d-f6bbb57e9c96