src/apps/pulse/PulseApp.cpp
@@ -37,6 +37,8 @@
 PulseApp::PulseApp(int argc, char **argv)
 	: BApplication(APP_SIGNATURE)
 {
+	be_locale->GetAppCatalog(&fCatalog);
+
 	prefs = new Prefs();
 
 	int mini = false, deskbar = false, normal = false;
@@ -246,10 +248,6 @@ LoadInDeskbar()
 int
 main(int argc, char **argv)
 {
-	BCatalog fAppCatalog;
-	
-	be_locale->GetAppCatalog(&fAppCatalog);
-
 	PulseApp *pulseapp = new PulseApp(argc, argv);
 	pulseapp->Run();
 	delete pulseapp;
